--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
       <select id="category">
         <option value="Food">Food</option>
         <option value="Travel">Travel</option>
+        <option value="Fitness">Fitness</option>
         <option value="Study">Study</option>
         <option value="Entertainment">Entertainment</option>
-        <option value="Other">Other</option>
+        <option value="Other">Other</option> 
       </select>
 
       <button type="submit">Add Expense</button>
